# FlexisoftIPC

./: README.md
socket_fx_pkg/: CMakeLists.txt  package.xml
socket_fx_pkg/include/socket_fx_pkg/: socket_fx.h
socket_fx_pkg/src/: client_fx.cpp  server_fx.cpp  server_node.cpp
tcp_flexisoft_pkg/: CMakeLists.txt  package.xml
tcp_flexisoft_pkg/include/tcp_flexisoft_pkg/: client.h  flexisoft_fx.h  flexisoft_msg.h
tcp_flexisoft_pkg/msg/: agv_action.msg  fx_to_ipc.msg
tcp_flexisoft_pkg/src/: flexisoft.cpp  fx_demo.cpp  fx_node.cpp  fx_to_ipc.cpp  ipc_to_fx.cpp
